--- a/CreateTaskSnakeGame/index.html
+++ b/CreateTaskSnakeGame/index.html
@@ -10,6 +10,7 @@
     <script src="food.js" type="text/javascript"></script>
     <script src="snake.js" type="text/javascript"></script>
     <script src="button.js" type="text/javascript"></script>
+    <script src="obstacle.js" type="text/javascript"></script>
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
 
